--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -1,27 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/baseLayout" >
+    android:background="@color/list_background" >
 
-    <FrameLayout
-        android:id="@+id/realTabContent"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_dark" >
 
-    <android.support.v4.app.FragmentTabHost
-        android:id="@android:id/tabhost"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        <ImageView
+            android:id="@+id/filterImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/filter"
+            android:src="@drawable/filter" />
 
-        <FrameLayout
-            android:id="@android:id/tabcontent"
+        <TextView
+            android:id="@+id/myTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/pivotView"
+            android:layout_marginRight="13dp"
+            android:text="@string/myReport"
+            android:textSize="20sp"
+            android:textColor="@color/major_light" />
+
+        <View
+            android:id="@+id/pivotView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="0" />
-        
-    </android.support.v4.app.FragmentTabHost>
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:id="@+id/othersTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/pivotView"
+            android:layout_marginLeft="13dp"
+            android:text="@string/othersReport"
+            android:textSize="20sp"
+            android:textColor="@color/hint_white" />
+
+    </RelativeLayout>
+
+    <classes.Widget.XListView
+        android:id="@+id/reportListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"  >
+    </classes.Widget.XListView>
 
 </LinearLayout>
