--- a/res/layout/list_toggle.xml
+++ b/res/layout/list_toggle.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
     android:orientation="horizontal"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:padding="10dp"
     android:background="@drawable/list_item_drawable" >
 
     <TextView
@@ -16,9 +15,12 @@
 
     <ToggleButton
         android:id="@+id/toggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-		android:layout_centerVertical="true"
-        android:layout_alignParentRight="true" />
+        android:layout_width="103dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/toggle_drawable"
+        android:textOn=""
+        android:textOff="" />
 
 </RelativeLayout>
