--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="major_dark">#ffff575b</color>
     <color name="major_light">#ffffffff</color>
     
-    <color name="hint_white">#ccff575b</color>
-    <color name="hint_grey">#ffff575b</color>
+    <color name="hint_white">#ccffffff</color>
+    <color name="hint_grey">#cc000000</color>
     
     <color name="list_background">#fff4f4f5</color>
     <!-- <color name="list_background">#ffff0000</color> -->
@@ -19,5 +19,8 @@
     
     <color name="reim_pie_occupy">#ff0366c9</color>
     <color name="reim_pie_remain">#ff03caca</color>
+    
+    <color name="radio_button_selected_color">#ff33b5e5</color>
+    <color name="radio_button_unselected_color">@android:color/transparent</color>
         
 </resources>
