--- a/res/layout/fragment_reim.xml
+++ b/res/layout/fragment_reim.xml
@@ -37,7 +37,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
             android:contentDescription="@string/search"
-            android:src="@drawable/search" />
+            android:src="@drawable/search"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
