--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -15,17 +15,61 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/me"
+            android:text="@string/personalCenter"
             android:textSize="20sp"
             android:textColor="@color/major_light" />
 
     </RelativeLayout>
 
-	<ListView
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:id="@+id/meListView"
-        android:cacheColorHint="#00000000"  >	
-	</ListView>
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            
+			<ListView
+			    android:id="@+id/meListView"
+			    android:layout_width="match_parent"
+			    android:layout_height="99dp"
+			    android:layout_marginTop="18dp"
+			    android:background="@android:color/white"
+			    android:headerDividersEnabled="true"
+			    android:footerDividersEnabled="true"
+			    android:divider="@color/divider"
+			    android:dividerHeight="0.5dp" >	
+			</ListView>
+
+			<ListView
+			    android:id="@+id/operationListView"
+			    android:layout_width="match_parent"
+			    android:layout_height="203dp"
+			    android:layout_marginTop="24dp"
+			    android:background="@android:color/white"
+			    android:headerDividersEnabled="true"
+			    android:footerDividersEnabled="true"
+			    android:divider="@color/divider"
+			    android:dividerHeight="0.5dp" >	
+			</ListView>
+		
+			<ListView
+			    android:id="@+id/otherListView"
+			    android:layout_width="match_parent"
+			    android:layout_height="102dp"
+			    android:layout_marginTop="24dp"
+			    android:layout_marginBottom="24dp"
+			    android:background="@android:color/white"
+			    android:headerDividersEnabled="true"
+			    android:footerDividersEnabled="true"
+			    android:divider="@color/divider"
+			    android:dividerHeight="0.5dp" >		
+			</ListView>
+			
+        </LinearLayout>
+        
+    </ScrollView>
     
 </LinearLayout>
