--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -1,37 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:reim="http://schemas.android.com/apk/res/com.rushucloud.reim"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="10dp"
+    android:layout_height="98dp"
     android:background="@drawable/list_item_drawable" >
 
     <classes.Widget.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
         android:contentDescription="@string/avatar"
         android:src="@drawable/default_avatar"
         reim:border_width="0dp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="10dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_toRightOf="@+id/imageView"
+        android:layout_toLeftOf="@+id/nextImageView"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
 
         <TextView
             android:id="@+id/nicknameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_above="@+id/pivotView"
+            android:ellipsize="end"
+            android:singleLine="true"
+	        android:textColor="@color/font_major"
+	        android:textSize="16sp" />
+
+	    <View
+	        android:id="@+id/pivotView"
+	        android:layout_width="0dp"
+	        android:layout_height="0dp"
+	        android:layout_centerInParent="true" />
 
         <TextView
             android:id="@+id/companyTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp" />
+            android:layout_below="@+id/pivotView"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+	        android:textColor="@color/font_major"
+	        android:textSize="16sp"  />
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/nextImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:contentDescription="@string/nullString"
+        android:src="@drawable/next" />
+
+</RelativeLayout>
