--- a/res/layout/me_user.xml
+++ b/res/layout/me_user.xml
@@ -7,8 +7,7 @@
     <ListView
         android:id="@+id/userListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:listSelector="@android:color/transparent" >
+        android:layout_height="match_parent" >
     </ListView>
 
 </LinearLayout>
