--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
+    <color name="font_major">#ff373737</color>
+    
+    <color name="divider">#1a000000</color>
+    
     <color name="major_dark">#ffff575b</color>
     <color name="major_light">#ffffffff</color>
     
     <color name="hint_white">#ccffffff</color>
-    <color name="hint_grey">#cc000000</color>
+    <color name="hint_dark_grey">#cc000000</color>
+    <color name="hint_light_grey">#66000000</color>
     
-    <color name="list_background">#fff4f4f5</color>
-    <!-- <color name="list_background">#ffff0000</color> -->
+    <color name="list_background">#fff5f6f8</color>
     <color name="list_item_selected">#fffbe2e3</color>
     <color name="list_item_not_selected">#00000000</color>
     <color name="list_item_approved">#ff3cb798</color>
