--- a/res/layout/grid_report_tag_draft.xml
+++ b/res/layout/grid_report_tag_draft.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/statusTextView"
-    android:gravity="center" >
+    android:gravity="center"
+    android:clickable="true"
+    android:background="@drawable/report_tag_draft_drawable"
+    android:textColor="@drawable/report_tag_draft_text_color"
+    android:text="@string/report_status_draft" >
 
 </TextView>
