--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="font_major">#ff373737</color>
+    <color name="font_major">#FF373737</color>
     
-    <color name="divider">#1a000000</color>
+    <color name="divider">#1A000000</color>
     
-    <color name="major_dark">#ffff575b</color>
-    <color name="major_light">#ffffffff</color>
+    <color name="major_dark">#FFFF575B</color>
+    <color name="major_light">#FFFFFFFF</color>
     
-    <color name="hint_white">#ccffffff</color>
-    <color name="hint_dark_grey">#cc000000</color>
+    <color name="hint_white">#CCFFFFFF</color>
+    <color name="hint_dark_grey">#CC000000</color>
     <color name="hint_light_grey">#66000000</color>
     
-    <color name="list_background">#fff5f6f8</color>
-    <color name="list_item_selected">#fffbe2e3</color>
-    <color name="list_item_not_selected">#00000000</color>
-    <color name="list_item_approved">#ff3cb798</color>
-    <color name="list_item_prove_ahead">#ffff575b</color>
+    <color name="list_background">#FFF5F6F8</color>
+    <color name="list_item_selected">#FFFBE2E3</color>
+    <color name="list_item_unselected">#00000000</color>
     
-    <color name="tab_item_selected">#ffff575b</color>
-    <color name="tab_item_not_selected">#ff61686d</color>
+    <color name="tab_item_selected">#FFFF575B</color>
+    <color name="tab_item_unselected">#FF61686D</color>
     
-    <color name="reim_pie_occupy">#ff0366c9</color>
-    <color name="reim_pie_remain">#ff03caca</color>
+    <color name="reim_pie_occupy">#FF0366C9</color>
+    <color name="reim_pie_remain">#FF03CACA</color>
     
-    <color name="radio_button_selected_color">#ff33b5e5</color>
+    <color name="radio_button_selected_color">#FF33B5E5</color>
     <color name="radio_button_unselected_color">@android:color/transparent</color>
+    
+    <color name="item_approved">#FF3CB798</color>
+    <color name="item_prove_ahead">#FFFF575B</color>
+    
+    <color name="report_status_draft">#FFA17356</color>
+    <color name="report_status_submitted">#FF46A3D3</color>
+    <color name="report_status_approved">#FF3CB798</color>
+    <color name="report_status_rejected">#FFB570B2</color>
+    <color name="report_status_finished">#FFCCCECF</color>
         
 </resources>
