--- a/res/drawable/report_tag_draft_drawable.xml
+++ b/res/drawable/report_tag_draft_drawable.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     
     <item android:state_pressed="true" android:drawable="@drawable/report_tag_draft_selected" />
-    <item android:state_pressed="false" android:drawable="@drawable/report_tag_draft_unselected" />
+    <item android:state_pressed="false" android:state_checked="true" android:drawable="@drawable/report_tag_draft_selected" />
+    <item android:state_pressed="false" android:state_checked="false" android:drawable="@drawable/report_tag_draft_unselected" />
     
 </selector>
