--- a/res/layout/list_button.xml
+++ b/res/layout/list_button.xml
@@ -13,7 +13,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_long_dark"
-        android:textColor="@color/major_light" />
+        android:background="@drawable/button_long_dark_drawable"
+        android:textColor="@color/button_text_color_light" />
 
 </LinearLayout>
