--- a/res/layout/report_filter.xml
+++ b/res/layout/report_filter.xml
@@ -58,7 +58,7 @@
     
     <classes.Widget.SegmentedGroup
         android:id="@+id/sortRadioGroup"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
         android:layout_below="@+id/sortDivider"
@@ -128,6 +128,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:listSelector="@android:color/transparent"
         android:numColumns="4"
         android:verticalSpacing="22dp"
         android:horizontalSpacing="10dp" >
