--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,6 +12,9 @@
     <color name="hint_dark_grey">#CC000000</color>
     <color name="hint_light_grey">#66000000</color>
     
+    <color name="button_text_dark">#FFFF898C</color>
+    <color name="button_text_light">#FFFFFFFF</color>
+    
     <color name="list_background">#FFF5F6F8</color>
     <color name="list_item_selected">#FFFBE2E3</color>
     <color name="list_item_unselected">#00000000</color>
