--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -39,7 +39,7 @@
 			    android:background="@android:color/white"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
-			    android:divider="@color/divider"
+			    android:divider="@color/list_divider"
 			    android:dividerHeight="0.5dp" >	
 			</ListView>
 
@@ -51,7 +51,7 @@
 			    android:background="@android:color/white"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
-			    android:divider="@color/divider"
+			    android:divider="@color/list_divider"
 			    android:dividerHeight="0.5dp" >	
 			</ListView>
 		
@@ -64,7 +64,7 @@
 			    android:background="@android:color/white"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
-			    android:divider="@color/divider"
+			    android:divider="@color/list_divider"
 			    android:dividerHeight="0.5dp" >		
 			</ListView>
 			
