--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -28,7 +28,7 @@
 	        android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-	        android:textColor="@color/font_major"
+	        android:textColor="@color/font_major_dark"
 	        android:textSize="22sp" />
 	    
     </LinearLayout>
