--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -33,7 +33,7 @@
             android:layout_above="@+id/pivotView"
             android:ellipsize="end"
             android:singleLine="true"
-	        android:textColor="@color/font_major"
+	        android:textColor="@color/font_major_dark"
 	        android:textSize="16sp" />
 
 	    <View
@@ -50,7 +50,7 @@
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:singleLine="true"
-	        android:textColor="@color/font_major"
+	        android:textColor="@color/font_major_dark"
 	        android:textSize="16sp"  />
 
     </RelativeLayout>
