--- a/res/layout/list_text.xml
+++ b/res/layout/list_text.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="16dp"
         android:textSize="16sp"
-        android:textColor="@color/font_major" />
+        android:textColor="@color/font_major_dark" />
 
     <ImageView
         android:id="@+id/nextImageView"
