--- a/res/layout/me_profile.xml
+++ b/res/layout/me_profile.xml
@@ -11,7 +11,7 @@
 	    android:layout_height="203dp"
         android:layout_marginTop="18dp"
 	    android:background="@android:color/white"
-		android:divider="@color/divider"
+		android:divider="@color/list_divider"
 		android:dividerHeight="0.5dp"
 	    android:descendantFocusability="beforeDescendants" />	
 	    
@@ -21,7 +21,7 @@
         android:layout_height="152.5dp"
         android:layout_marginTop="24dp"
 	    android:background="@android:color/white"
-		android:divider="@color/divider"
+		android:divider="@color/list_divider"
 		android:dividerHeight="0.5dp" />
 
 </LinearLayout>
