--- a/res/layout/me_settings.xml
+++ b/res/layout/me_settings.xml
@@ -39,7 +39,7 @@
 	    android:background="@android:color/white"
 	    android:headerDividersEnabled="true"
 		android:footerDividersEnabled="true"
-		android:divider="@color/divider"
+		android:divider="@color/list_divider"
 		android:dividerHeight="0.5dp" />
 
 </LinearLayout>
