--- a/res/layout/start_divider.xml
+++ b/res/layout/start_divider.xml
@@ -3,6 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="0.5dp"
     android:orientation="vertical"
-    android:background="@color/divider" >    
+    android:background="@color/start_divider" >
 
 </LinearLayout>
