--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -6,20 +6,50 @@
     android:background="@drawable/start_background"
     android:orientation="vertical" >
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:contentDescription="@string/background"
+        android:scaleType="fitXY"
+        android:src="@drawable/start_background" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:contentDescription="@string/nullString"
+        android:src="@drawable/start_icon" />
+
     <EditText
         android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:hint="@string/inputUsername"
         android:inputType="text"
-        android:textColorHint="@color/hint_white" />
+        android:textColor="@color/font_major_light"
+        android:textColorHint="@color/hint_white" 
+        android:background="@null"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/cursor" />
 
     <requestFocus />
+
+    <include 
+        android:id="@+id/signInDivider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/usernameEditText"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/start_divider"/>
 
     <EditText
         android:id="@+id/passwordEditText"
@@ -27,42 +57,64 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/usernameEditText"
         android:layout_alignRight="@+id/usernameEditText"
-        android:layout_below="@+id/usernameEditText"
-        android:layout_marginTop="25dp"
+        android:layout_below="@+id/signInDivider"
+        android:layout_marginTop="12dp"
         android:hint="@string/inputPassword"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/font_major_light"
+        android:textColorHint="@color/hint_white" 
+        android:background="@null"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/cursor" />
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/passwordEditText"
+        android:layout_marginTop="14dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_long_light_solid_drawable"
+        android:text="@string/signIn"
+        android:textColor="@color/start_button_text_color"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/forgotTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/passwordEditText"
-        android:layout_below="@+id/passwordEditText"
-        android:layout_marginTop="25dp"
-        android:text="@string/forgotPassword" />
+        android:layout_alignLeft="@+id/confirmButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/forgotPassword"
+        android:textSize="14sp"
+        android:textColor="@color/start_font" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/signUpImageView"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+		android:layout_marginRight="16dp"
+        android:contentDescription="@string/signUp"
+        android:src="@drawable/jump" />
+
+    <TextView
+        android:id="@+id/signUpTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="?android:attr/buttonBarStyle"
-        android:layout_alignParentBottom="true" >
-
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/cancel" />
-
-        <Button
-            android:id="@+id/confirmButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/confirm" />
-        
-    </LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/signUpImageView"
+        android:layout_marginBottom="14dp"
+        android:layout_marginRight="6dp"        
+        android:text="@string/signUp"
+        android:textSize="14sp" 
+        android:textColor="@color/start_font" />
 
 </RelativeLayout>
