--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -37,6 +37,7 @@
 			    android:layout_height="99dp"
 			    android:layout_marginTop="18dp"
 			    android:background="@android:color/white"
+			    android:scrollbars="none"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
 			    android:divider="@color/list_divider"
@@ -49,6 +50,7 @@
 			    android:layout_height="203dp"
 			    android:layout_marginTop="24dp"
 			    android:background="@android:color/white"
+			    android:scrollbars="none"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
 			    android:divider="@color/list_divider"
@@ -62,6 +64,7 @@
 			    android:layout_marginTop="24dp"
 			    android:layout_marginBottom="24dp"
 			    android:background="@android:color/white"
+			    android:scrollbars="none"
 			    android:headerDividersEnabled="true"
 			    android:footerDividersEnabled="true"
 			    android:divider="@color/list_divider"
