--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -98,6 +98,7 @@
                 android:layout_height="60dp"
 				android:layout_marginBottom="1dp"
 				android:layout_alignParentBottom="true"
+				android:layout_centerHorizontal="true"
                 android:background="@drawable/add_button" />
 
         </RelativeLayout>
