--- a/res/layout/list_member.xml
+++ b/res/layout/list_member.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@drawable/list_item_drawable"
-    android:padding="5dp" >
+    android:layout_height="66dp"
+    android:gravity="center_vertical"
+    android:background="@drawable/list_item_drawable" >
 
-    <ImageView
+    <classes.Widget.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="16dp"
         android:contentDescription="@string/avatar"
-        android:src="@drawable/default_avatar" />
+        android:src="@drawable/default_avatar"
+        reim:border_width="0dp" />
 
     <TextView
         android:id="@+id/nicknameTextView"
-        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp" />
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/imageView"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp" />
 
-</LinearLayout>
+</RelativeLayout>
