--- a/res/layout/list_profile.xml
+++ b/res/layout/list_profile.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:reim="http://schemas.android.com/apk/res/com.rushucloud.reim"
+    xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="98dp"
     android:background="@drawable/list_item_drawable" >
