--- a/res/layout/me_profile.xml
+++ b/res/layout/me_profile.xml
@@ -11,6 +11,7 @@
 	    android:layout_height="203dp"
         android:layout_marginTop="18dp"
 	    android:background="@android:color/white"
+		android:scrollbars="none"
 		android:divider="@color/list_divider"
 		android:dividerHeight="0.5dp"
 	    android:descendantFocusability="beforeDescendants" />	
@@ -21,6 +22,7 @@
         android:layout_height="152.5dp"
         android:layout_marginTop="24dp"
 	    android:background="@android:color/white"
+		android:scrollbars="none"
 		android:divider="@color/list_divider"
 		android:dividerHeight="0.5dp" />
 
